# ComfyUI_StylesManager

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  NOTICE  README.md  version.h.in
include/: main_window.h  new_entry_dialog.h  prompt_entry.h  prompt_entry_list_model.h  prompt_name_validator.h  settings.h
src/: main.cpp  main_window.cpp  new_entry_dialog.cpp  prompt_entry_list_model.cpp  settings.cpp
ui/: main_window.ui  new_entry_dialog.ui
